# ML-IDS

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Jenkinsfile  LICENSE  README.md  SECURITY_FIXES.md  TEST_RESULTS.md  alembic.ini  docker-compose.yml  mlids.db  requirements.txt  setup.py  sonar-project.properties  test_traffic_capture.py  validate_deployment.sh
Data/CICD/: readme.txt
data/CIC-IDS2017/: DATASET_DETAILS.md  readme.txt
data/CICD/: source.txt
docs/: API.md  DATASET.md  MODEL_DETAILS.md  UNIFIED_MODEL.md  UNIFIED_MODEL_ARCHITECTURE.md
docs/articles/: Adaptive_Alert_Correlation.md
migrations/: env.py
notebooks/: MODEL_DETAILS.md  build_unified_notebook.py  cic-unsw-nb15_exploratory_analysis.ipynb  feature_engineering.ipynb  ft_transformer_optuna_sweep.py  log_to_mlflow.py  model_selection.ipynb  model_selection_and_training.ipynb  model_training.ipynb  unified_supervised_training.executed.ipynb  unified_supervised_training.ipynb
scripts/: sustained_attack.py  test_traffic_capture.py  validate_deployment.sh  verify_refactor.py
src/: model_trainer.py  train_server.py
src/traffic_capture_service/: .dockerignore  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml  main.rs
tests/: conftest.py  curl_predict_full.sh  model_trainer_test.py  test_auth.py  test_database.py  test_inference_server.py  test_retraining_server.py  test_validation.py  train_server_test.py
wiki/: API-Reference.md  Alert-and-Incident-Management.md  Architecture-and-Data-Flow.md  Development-Guide.md  Home.md  Notification-Channels.md
(+31 files in other folders)
