[package]
name = "traffic_capture_service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "traffic_capture_service"
path = "src/main.rs"

[dependencies]
pcap = "0.8"
tokio = { version = "1.0", features = ["full"] }
aws-config = { version = "1.1.2", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.9.0"
aws-smithy-types = "0.55.3"
aws-types = "0.55.3"
anyhow = "1.0"
log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.24", features = ["serde"] }
config = "0.13"
clap = { version = "4.0", features = ["derive"] }
http = "0.2"
bytes = "1.0"
aws-smithy-http = { version = "0.55.3", features = ["rt-tokio"] }
aws-smithy-http-tower = "0.55.3"
aws-http = "0.55.3"
base64ct = "=1.6.0"  # Pinned to a version that doesn't require edition 2024

[build-dependencies]
aws-config = "1.1.2"
